<resources>
    <string name="app_name">MoneyManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_wallet">Wallet</string>

    <string name="money_left">Money Left:</string>
    <string name="until">Until:</string>

    <string name="planner_fragment_title">Planner</string>
    <string name="transaction_fragment_title">Transactions</string>
    <string name="savings_fragment_title">Savings</string>

    <string name="create_budget_plan">Create Budget Plan</string>
    <string name="budget">Budget:</string>
    <string name="currency">Currency:</string>
    <string name="color">Color:</string>

    <string name="pay_day">When do you get paid?</string>
    <string name="placeholder">Placeholder</string>

    <string name="go_to_expenses">Go to Expenses</string>
    <string name="go_to_savings">Go to Savings</string>
    <string name="create_plan">Create Plan</string>

    <string name="add_savings_plan">Add Savings Plan</string>
    <string name="savings_goal">Savings Goal:</string>
    <string name="add_wish">Add Wish</string>
    <string name="current_wish">Current Wish:</string>

    <string name="expense">Expense</string>
    <string name="cancel">Cancel</string>

    <string name="start_plan">Start of the Plan:</string>
    <string name="end_plan">End of the Plan:</string>

    <string name="create_wish">Create a wish</string>

    <string name="remaining">Remaining:</string>
    <string name="placeholder_number">4200</string>

    <string name="achievements">Achievements</string>

    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="other_date">Other Date</string>

    <string name="when_to_update">When should the plan update?</string>

    <string name="ex_wish_name">E.g. Trip to Chernobyl</string>
    <string name="ex_wish_desc">Radiation is nice this time of year</string>

    <string name="shared_preferences_key">ROWROWROWYOURBOATGENTLYDOWNTHESTREAM</string>
    <string name="shared_preferences_budget_key">PlanBudget</string>
    <string name="shared_preferences_remaining_budget_key">RemainingBudget</string>
    <string name="shared_preferences_start_date_key">PlanStartDate</string>
    <string name="shared_preferences_end_date_key">PlanEndDate</string>

    <string name="shared_preferences_wish_savings_key">WishSavings</string>

    <string name="transaction_alert_dialog_title">Create a budgetTransaction</string>
    <string name="transaction_alert_dialog_add">Add Transaction</string>

    <string name = "toast_transaction_added">Transaction Added</string>

    <string name = "delete_transaction_alert_title">Delete this transaction?</string>
    <string name = "delete">Delete</string>
    <string name = "yes">Yes</string>
    <string name = "no">No</string>

    <string name="expense_entity_drawable">ExpenseDrawable</string>
    <string name="expense_entity_name">ExpenseName</string>
    <string name="expense_entity_budget">ExpenseBudget</string>

    <string name="toast_expense_small_list_warning">You must add at least one expense to continue</string>
    <string name="toast_wish_list_add_no_name">Wish must have a name</string>
    <string name="toast_wish_no_savings_warning">You must add a savings goal </string>

    <string name="transaction_item_category">Category:</string>
    <string name="transaction_item_name">Name:</string>
    <string name="transaction_item_sum">Sum:</string>
    <string name="transaction_item_date">Date:</string>
    <string name="transaction_item_description">Description:</string>


    <string-array name="currency_array">
        <item>RON</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>USD</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>RUB</item>
        <item>PLN</item>
    </string-array>

    <string-array name="color_names">
        <item>lightBlue</item>
        <item>darkBlue</item>
        <item>mauve</item>
        <item>orange</item>
        <item>lavender</item>
        <item>purple</item>
        <item>aqua</item>
        <item>green</item>
        <item>mustard</item>
        <item>darkGray</item>
        <item>pink</item>
        <item>lightGray</item>
    </string-array>


</resources>
