<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mircea.moneymanager.Activities.CreatePlanActivity">

    <TextView
        android:id="@+id/createBudgetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/budgetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="125dp"
        android:text="@string/budget"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBudgetTextView" />

    <EditText
        android:id="@+id/budgetEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/budgetTextView"
        app:layout_constraintStart_toEndOf="@+id/budgetTextView"
        app:layout_constraintTop_toTopOf="@+id/budgetTextView" />

    <TextView
        android:id="@+id/currencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/currency"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="@+id/budgetEditText"
        app:layout_constraintStart_toEndOf="@+id/budgetEditText"
        app:layout_constraintTop_toTopOf="@+id/budgetEditText" />

    <Spinner
        android:id="@+id/currencySpinner"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/currencyTextView"
        app:layout_constraintStart_toEndOf="@+id/currencyTextView"
        app:layout_constraintTop_toTopOf="@+id/currencyTextView" />

    <TextView
        android:id="@+id/paidTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/pay_day"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetTextView" />

    <Button
        android:id="@+id/goToExpenses"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="#FFF"
        android:text="@string/go_to_expenses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paidTextView"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
