<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_savings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.example.mircea.moneymanager.Activities.CreatePlanSavings">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:id="@+id/goToMainActivityButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/create_plan"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addSavingsPlanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_savings_plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/savingGoalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/savings_goal"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSavingsPlanTextView" />

    <EditText
        android:id="@+id/savingsSavingEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/savingGoalTextView"
        app:layout_constraintStart_toEndOf="@+id/savingGoalTextView"
        app:layout_constraintTop_toTopOf="@+id/savingGoalTextView" />

    <Button
        android:id="@+id/savingsAddWishButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/add_wish"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingGoalTextView" />

    <TextView
        android:id="@+id/currentWishTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/current_wish"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/savingsAddWishButton"
        app:layout_constraintStart_toStartOf="@+id/savingsAddWishButton"
        app:layout_constraintTop_toBottomOf="@+id/savingsAddWishButton" />

    <ExpandableListView
        android:id="@+id/wishExpandableListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/goToMainActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentWishTextView"
        app:layout_constraintVertical_bias="1.0" />



</android.support.constraint.ConstraintLayout>
